// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Modal renders Modal component with default title 1`] = `
.c1 {
  background: white;
  height: auto;
  left: 50%;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 60%;
  z-index: 9000;
}

.c0 {
  background: rgba(0,0,0,0.6);
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 8000;
}

.c2 {
  height: 6rem;
  font-size: 2.4rem;
  border-bottom: 1px solid #b0b0b0;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0 1rem 0 2rem;
  text-align: left;
  line-height: 1;
}

.c3 {
  border: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 4rem;
  min-height: 4rem;
  cursor: pointer;
  width: 4rem;
  height: 4rem;
}

.c3 svg {
  display: block;
}

.c4 {
  padding: 2rem;
}

@media (max-width:26.25em) {
  .c1 {
    width: calc(100% - 2rem - 2rem);
  }
}

<div>
  <div
    class="c0"
  />
  <section
    aria-labelledby="dialog-label"
    aria-modal="true"
    class="c1"
    role="dialog"
  >
    <h3
      class="c2"
      data-testid="modal-header"
      id="dialog-label"
    >
      Modal
      <button
        aria-label="close"
        class="c3"
      >
        <svg
          height="19"
          width="19"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.54 19.064l6.987-6.986 6.986 6.987 2.475-2.475-6.987-6.987 6.987-6.986L16.513.142 9.527 7.128 2.541.142.065 2.617l6.987 6.986-6.986 6.986z"
            fill="#b0b0b0"
          />
        </svg>
      </button>
    </h3>
    <section
      class="c4"
      data-testid="modal-body"
    >
      Test
    </section>
  </section>
</div>
`;

exports[`COMPONENT - Modal renders Modal component with defined title 1`] = `
.c1 {
  background: white;
  height: auto;
  left: 50%;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 60%;
  z-index: 9000;
}

.c0 {
  background: rgba(0,0,0,0.6);
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 8000;
}

.c2 {
  height: 6rem;
  font-size: 2.4rem;
  border-bottom: 1px solid #b0b0b0;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0 1rem 0 2rem;
  text-align: left;
  line-height: 1;
}

.c3 {
  border: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 4rem;
  min-height: 4rem;
  cursor: pointer;
  width: 4rem;
  height: 4rem;
}

.c3 svg {
  display: block;
}

.c4 {
  padding: 2rem;
}

@media (max-width:26.25em) {
  .c1 {
    width: calc(100% - 2rem - 2rem);
  }
}

<div>
  <div
    class="c0"
  />
  <section
    aria-labelledby="dialog-label"
    aria-modal="true"
    class="c1"
    role="dialog"
  >
    <h3
      class="c2"
      data-testid="modal-header"
      id="dialog-label"
    >
      Defined Modal Title
      <button
        aria-label="close"
        class="c3"
      >
        <svg
          height="19"
          width="19"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.54 19.064l6.987-6.986 6.986 6.987 2.475-2.475-6.987-6.987 6.987-6.986L16.513.142 9.527 7.128 2.541.142.065 2.617l6.987 6.986-6.986 6.986z"
            fill="#b0b0b0"
          />
        </svg>
      </button>
    </h3>
    <section
      class="c4"
      data-testid="modal-body"
    >
      Test
    </section>
  </section>
</div>
`;
